# IAM851_Project_1

./: .gitignore  KdV.c  Makefile.am  animate.gnuplot  config.h  configure.ac  convert.c  kdv_equation.c  kdv_equation.h  plot.sh  solver.c  solver.h  test_kdv_comp.c  test_kdv_comp_three.c  test_kdv_comp_two.c  test_kdv_long.c  test_kdv_parallel.c  test_kdv_parallel_scaling.c  test_kdv_scaling.c  test_kdv_short.c  test_kdv_simple.c  test_kdv_three.c  test_kdv_two.c  vector_fun.c  vector_fun.h
