
ACLOCAL_AMFLAGS = -I m4

#bin_PROGRAMS = \
#        test_vec_write \
#        test_scalar_product \
#		test_mat_vec_mult \
#		test_vec_add

lib_LIBRARIES = libkdv.a
libkdv_a_SOURCES = \
        vector_fun.h \
        vector_fun.c \
        kdv_equation.h \
        kdv_equation.c \
        solver.h \
        solver.c
		
LDADD = libkdv.a

#TESTS = test_vec_write \
#        test_scalar_product \
#		test_mat_vec_mult \
#		test_vec_add